--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
         <meta charset="utf-16">
         <title>Bobby Lee</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Google+Sans:400,500|Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Rubik:400,600" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link rel="icon" href="favicon.ico">
-        
     </head>
     <body>
-        <!--
-        <header>
-            <p>Bobby Lee</p>
-        </header>
-        <div class="content">
-            <h3>Hello.</h3>
-            <p>I make stuff. Usually, it's not on the internet. Sometimes, I post it on the internet. Most of the stuff I make is garbage.<br>Also, I like <a href="https://xkcd.com" target="_blank">xkcd</a>.</p>
-        </div>
-        -->
         <script src="sketch.js"></script>
+        <header>
+            hello!
+        </header>
+        <div class="home">
+            <h1></h1>
+        </div>
         <overlay></overlay>
     </body>
 </html>
