--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Rubik:400,600" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <script></script>
         <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <script src="sketch.js"></script>
         <header>
-            hello!
+            <img class="menu-icon" src="icon.png" width="50" height="50">
+            <div class="links">
+                <ul>
+                    <li class="menu-4"><a>RESUME</a></li>
+                    <li class="menu-3"><a>WORKS</a></li>
+                    <li class="menu-2"><a>ABOUT</a></li>
+                    <li class="menu-1"><p>HOME</p></li>
+                </ul>
+            </div>
         </header>
-        <div class="home">
-            <h1></h1>
+        <div class="main">
+            <h1 class="title">Bobby Lee</h1>
         </div>
         <overlay></overlay>
     </body>
