--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Rubik:400,600" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
-        <script></script>
+        <script src="main.js"></script>
         <link rel="icon" href="favicon.ico">
     </head>
     <body>
@@ -15,10 +15,10 @@
             <img class="menu-icon" src="icon.png" width="50" height="50">
             <div class="links">
                 <ul>
-                    <li class="menu-4"><a>RESUME</a></li>
-                    <li class="menu-3"><a>WORKS</a></li>
-                    <li class="menu-2"><a>ABOUT</a></li>
-                    <li class="menu-1"><p>HOME</p></li>
+                    <li class="menu-4"><a href="resume/index.html">RESUME</a></li>
+                    <li class="menu-3"><a href="works/index.html">WORKS</a></li>
+                    <li class="menu-2"><a href="about/index.html">ABOUT</a></li>
+                    <li class="menu-1"><p class="current">HOME</p></li>
                 </ul>
             </div>
         </header>
